--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ https://templatemo.com/tm-562-space-dynamic
                 <h6>Welcome to RoyoGames</h6>
                 <h2>We Make <em>Digital Ideas</em> &amp; <span></span> Marketing</h2>
                 <p>Space Dynamic is a professional looking HTML template using a Bootstrap 5 (beta 2). This CSS template
-                  is free for you provided by 
+                  is free for you provided by
               </div>
             </div>
             <div class="col-lg-6">
@@ -155,7 +155,7 @@ https://templatemo.com/tm-562-space-dynamic
 
         </div>
         <div class="col-lg-3 col-sm-6">
-          
+
         </div>
         <div class="col-lg-3 col-sm-6">
 
@@ -172,7 +172,9 @@ https://templatemo.com/tm-562-space-dynamic
             <table class="table table-responsive">
               <tbody>
                 <tr>
-                  <td colspan="2">  <h2>Contact Us</h2></td>
+                  <td colspan="2">
+                    <h2>Contact Us</h2>
+                  </td>
                 </tr>
                 <tr>
                   <td colspan="2">We’re here to answer any question you may have. </td>
@@ -194,7 +196,7 @@ https://templatemo.com/tm-562-space-dynamic
           </div>
         </div>
         <div class="col-lg-6 wow fadeInRight" data-wow-duration="0.5s" data-wow-delay="0.25s">
-          <form id="contact" action="" method="post">
+          <form id="contact">
             <div class="row">
               <div class="col-lg-6">
                 <fieldset>
@@ -208,24 +210,21 @@ https://templatemo.com/tm-562-space-dynamic
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email"
+                  <input type="text" name="email" id="userEmail" pattern="[^ @]*@[^ @]*" placeholder="Your Email"
                     required="">
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <textarea name="message" type="text" class="form-control" id="message" placeholder="Message"
+                  <textarea name="message" type="text" class="form-control" id="messageBody" placeholder="Message"
                     required=""></textarea>
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <button type="submit" id="form-submit" class="main-button ">Send Message</button>
+                  <button type="button" id="form-submit" onclick="SendMail()" class="main-button ">Send Message</button>
                 </fieldset>
               </div>
-            </div>
-            <div class="contact-dec">
-              <img src="assets/images/contact-decoration.png" alt="">
             </div>
           </form>
         </div>
@@ -256,3 +255,26 @@ https://templatemo.com/tm-562-space-dynamic
 </body>
 
 </html>
+
+<script>
+  const url = "https://localhost:7065/"
+
+  function SendMail() {
+    let payload = {
+      Name: document.getElementById("name").value,
+      Surname: document.getElementById("surname").value,
+      SendingMessage: document.getElementById("messageBody").value,
+      UserMail: document.getElementById("userEmail").value,
+    }
+    fetch(`${url}Email/SendMail`, {
+      method: "POST",
+      body: JSON.stringify(payload),
+      headers: { "Content-type": "application/json; charset=UTF-8" }
+    })
+      .then(response => response.json())
+      .then(rsp => {
+        console.log(rsp)
+      })
+      .catch(err => console.log(err));
+  }
+</script>
