--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ https://templatemo.com/tm-562-space-dynamic
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
+              <li class="scroll-to-section"><a href="#home" class="active">Home</a></li>
               <li class="scroll-to-section"><a href="#games">Games</a></li>
               <li class="scroll-to-section"><a href="#portfolio">Team</a></li>
               <li class="scroll-to-section"><a href="#contact">Contact Now</a></li>
@@ -74,7 +74,7 @@ https://templatemo.com/tm-562-space-dynamic
   </header>
   <!-- ***** Header Area End ***** -->
 
-  <div class="main-banner wow fadeIn" id="top" data-wow-duration="1s" data-wow-delay="0.5s">
+  <div class="main-banner wow fadeIn" id="home" data-wow-duration="1s" data-wow-delay="0.5s">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -233,13 +233,30 @@ https://templatemo.com/tm-562-space-dynamic
   </div>
 
   <footer>
-    <div class="container">
+    <div class="container" >
       <div class="row">
-        <div class="col-lg-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.25s">
-          <p>© Copyright 2021 Space Dynamic Co. All Rights Reserved.
-
-            <br>Design: <a rel="nofollow" href="https://templatemo.com">TemplateMo</a>
-          </p>
+        <div class="col-lg-4 col-md-4 col-sm-12" style="padding-bottom: 30px;">
+          <img src=""> Resim Gelecek
+          <br>
+          <br>
+          <i class="fa fa-instagram fa-2x" area-hidden="true"></i> &emsp;
+          <i class="fa fa-linkedin fa-2x" area-hidden="true"></i>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12" style="padding-bottom: 30px;">
+          <ul>
+            <li><b>ABOUT US</b></li>
+            <li><a href="#home" class="active">Home</a></li>
+            <li><a href="#games">Games</a></li>
+            <li><a href="#portfolio">Team</a></li>
+            <li><a href="#contact">Contact Now</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12" style="padding-bottom: 30px;">
+          <ul>
+            <li><b>GAMES</b></li>
+            <li><a href="#game1" class="active">Game1</a></li>
+            <li><a href="#game2" >Game2</a></li>
+          </ul>
         </div>
       </div>
     </div>
