--- a/index.html
+++ b/index.html
@@ -115,22 +115,22 @@ https://templatemo.com/tm-562-space-dynamic
           </div>
           <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-4">
-              <a href="https://play.google.com/store/apps/details?id=com.matchingham.m3dcooking" target="_blank">
+              <a href="https://play.google.com/store/apps/details?id=com.royogames.hypermatch&hl=tr&gl=US" target="_blank">
                 <img src="assets/images/googlePlay.png" alt="team meeting" style="heigth: 57px;width:192px;">
               </a>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
+            <!-- <div class="col-sm-12 col-md-6 col-lg-4">
               <a href="https://play.google.com/store/apps/details?id=com.matchingham.m3dcooking" target="_blank">
                 <img src="assets/images/googlePlay.png" alt="team meeting" style="heigth: 57px;width:192px;">
               </a>
-            </div>
+            </div> -->
             <div class="col-lg-4">
             </div>
           </div>
         </div>
         <div class="col-lg-4 wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s">
           <div class="left-image">
-            <video class="elementor-video" src="assets/videos/royoGame1.mp4" autoplay="" loop="" muted="muted"
+            <video class="elementor-video" src="assets/videos/HyperMatch.mp4" autoplay="" loop="" muted="muted"
               playsinline="" controlslist="nodownload" width="345" height="612"></video>
           </div>
         </div>
@@ -254,7 +254,7 @@ https://templatemo.com/tm-562-space-dynamic
         <div class="col-lg-4 col-md-4 col-sm-12" style="padding-bottom: 30px;">
           <ul>
             <li><b>GAMES</b></li>
-            <li><a href="#game1" class="active">Game1</a></li>
+            <li><a href="https://play.google.com/store/apps/details?id=com.royogames.hypermatch&hl=tr&gl=US" target="_blank">Hyper Match</li>
             <li><a href="#game2" >Game2</a></li>
           </ul>
         </div>
