modal waiting loading eklendi

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@ https://templatemo.com/tm-562-space-dynamic
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li class="scroll-to-section"><a href="#home" class="active">Home</a></li>
-              <li class="scroll-to-section"><a href="#games">Games</a></li>
-              <li class="scroll-to-section"><a href="#portfolio">Team</a></li>
-              <li class="scroll-to-section"><a href="#contact">Contact Now</a></li>
+              <li class="scroll-to-section"><a href="#home"      id="h"   class="active" onclick="classActive('h')">Home</a></li>
+              <li class="scroll-to-section"><a href="#games"     id="g"   onclick="classActive('g')">Games</a></li>
+              <li class="scroll-to-section"><a href="#portfolio" id="t"    onclick="classActive('t')">Team</a></li>
+              <li class="scroll-to-section"><a href="#contact"   id="c"   onclick="classActive('c')">Contact Now</a></li>
             </ul>
             <a class='menu-trigger'>
               <span>Menu</span>
@@ -125,11 +125,6 @@ https://templatemo.com/tm-562-space-dynamic
                 <img src="assets/images/googlePlay.png" alt="team meeting" style="heigth: 57px;width:192px;">
               </a>
             </div>
-            <!-- <div class="col-sm-12 col-md-6 col-lg-4">
-              <a href="https://play.google.com/store/apps/details?id=com.matchingham.m3dcooking" target="_blank">
-                <img src="assets/images/googlePlay.png" alt="team meeting" style="heigth: 57px;width:192px;">
-              </a>
-            </div> -->
             <div class="col-lg-4">
             </div>
           </div>
@@ -252,7 +247,7 @@ https://templatemo.com/tm-562-space-dynamic
         <div class="col-lg-4 col-md-4 col-sm-12" style="padding-bottom: 30px;">
           <ul>
             <li><b>ABOUT US</b></li>
-            <li><a href="#home" class="active">Home</a></li>
+            <li><a href="#home">Home</a></li>
             <li><a href="#games">Games</a></li>
             <li><a href="#portfolio">Team</a></li>
             <li><a href="#contact">Contact Now</a></li>
