--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@ https://templatemo.com/tm-562-space-dynamic
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li class="scroll-to-section"><a href="#home"      id="h"   class="active" onclick="classActive('h')">Home</a></li>
-              <li class="scroll-to-section"><a href="#games"     id="g"   onclick="classActive('g')">Games</a></li>
-              <li class="scroll-to-section"><a href="#portfolio" id="t"    onclick="classActive('t')">Team</a></li>
-              <li class="scroll-to-section"><a href="#contact"   id="c"   onclick="classActive('c')">Contact Now</a></li>
+              <li class="scroll-to-section"><a href="#home" class="active">Home</a></li>
+              <li class="scroll-to-section"><a href="#games">Games</a></li>
+              <li class="scroll-to-section"><a href="#team">Team</a></li>
+              <li class="scroll-to-section"><a href="#contact">Contact Now</a></li>
             </ul>
             <a class='menu-trigger'>
               <span>Menu</span>
@@ -103,26 +103,29 @@ https://templatemo.com/tm-562-space-dynamic
     </div>
   </div>
 
-  <div id="games" class="games-services section" style="background-color: #fafafa;">
+  <div id="games" class="games-services section active" style="background-color: #fafafa;">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 align-self-center wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s">
-          <div class=" row section-heading">
+          <div class="row section-heading">
             <div class="col-sm-12">
-              <h2>Oyun Adı</h2>
+              <h2>Hyper Match</h2>
             </div>
           </div>
-          <div class="row" style="padding-bottom: 30px;padding-top: 30px;">
-            <div class="col-sm-12">
+          <div class="row" style="padding-bottom: 30px;padding-top: 20px;">
+            <div class="col-sm-10">
               <p> However, you are not permitted to redistribute the template ZIP file on any CSS template collection
-                websites. Please contact us for more information. Thank you for your kind cooperation.</p>
+                websites.
+                Please contact us for more information. Thank you for your kind cooperation.</p>
+            </div>
+            <div class="col-sm-2">
             </div>
           </div>
           <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-4">
               <a href="https://play.google.com/store/apps/details?id=com.royogames.hypermatch&hl=tr&gl=US"
                 target="_blank">
-                <img src="assets/images/googlePlay.png" alt="team meeting" style="heigth: 57px;width:192px;">
+                <img src="assets/images/googlePlay.png" alt="team meeting" height="57px" style="width:192px;">
               </a>
             </div>
             <div class="col-lg-4">
@@ -132,40 +135,48 @@ https://templatemo.com/tm-562-space-dynamic
         <div class="col-lg-4 wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s">
           <div class="left-image">
             <video class="elementor-video" src="assets/videos/HyperMatch.mp4" autoplay="" loop="" muted="muted"
-              playsinline="" controlslist="nodownload" width="345" height="612" style="border-radius: 20px;"></video>
+              playsinline="" controlslist="nodownload" width="300" height="545" style="border-radius: 20px;"></video>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <div id="portfolio" class="our-portfolio section">
+  <div id="team" class="our-team section active">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-6 offset-lg-3">
-          <div class="section-heading  wow bounceIn" data-wow-duration="1s" data-wow-delay="0.2s">
-            <h2>TEAM</h2>
+      <h4 class="text-center" style="padding-bottom: 50px;"><b>TEAMS</b></h4>
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-4">
+          <div class="card blog-card">
+            <img src="https://cdn.peak.com/static/assets/blog/blog-big-data.1064d43b.jpg" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">Aytaç Coşkun</h5>
+              <p class="card-text">Improving user engagement is our number one priority while developing...</p>
+              <a href="https://www.linkedin.com/in/ayta%C3%A7-co%C5%9Fkun-659408127/" target="_blank"
+                class="button read-more">LinkedIn
+                <i class="fa fa-angle-right"></i>
+              </a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-3 col-sm-6">
-
-        </div>
-        <div class="col-lg-3 col-sm-6">
-
-        </div>
-        <div class="col-lg-3 col-sm-6">
-
-        </div>
-        <div class="col-lg-3 col-sm-6">
-
+        <div class="col-12 col-lg-4">
+          <div class="card blog-card">
+            <img src="https://cdn.peak.com/static/assets/blog/blog-big-data.1064d43b.jpg" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">Ömer Faruk Bulanık</h5>
+              <p class="card-text">Improving user engagement is our number one priority while developing...</p>
+              <a href="https://www.linkedin.com/in/%C3%B6mer-faruk-bulan%C4%B1k-8754a75b/" target="_blank"
+                class="button read-more">LinkedIn
+                <i class="fa fa-angle-right"></i>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
 
-  <div id="contact" class="contact-us section">
+  <div id="contact" class="contact-us section active">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 align-self-center wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.25s">
@@ -236,34 +247,55 @@ https://templatemo.com/tm-562-space-dynamic
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-12" style="padding-bottom: 30px;">
+        <div class="col-md-4 padding-top-10" style=" padding: 25px;">
           <a href="index.html" class="logoFooter">
             <h4>Royo<span>Games</span></h4>
           </a>
           <br>
-          <i class="fa fa-instagram fa-2x" area-hidden="true"></i> &emsp;
-          <i class="fa fa-linkedin fa-2x" area-hidden="true"></i>
+          <span style="font-size: 15px;">
+            Space Dynamic is a professional lookin. This CSS template is free for you provided by
+          </span>
+          <br>
+          <br>
+          <br>
+          <a href="https://www.instagram.com/royogamescom" target="_blank" style="color: white;">
+            <i class="fa fa-facebook" area-hidden="true" style="font-size:27px;"></i>&emsp;
+          </a>
+          <a href="https://www.instagram.com/royogamescom" target="_blank" style="color: white;">
+            <i class="fa fa-instagram" area-hidden="true" style="font-size:27px;"></i> &emsp;
+          </a>
+          <a href="https://www.instagram.com/royogamescom" target="_blank" style="color: white;">
+            <i class="fa fa-linkedin" area-hidden="true" style="font-size:27px;"></i>
+          </a>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12" style="padding-bottom: 30px;">
+        <div class="col-md-4 ml-auto  padding-top-10" style="text-align-last: center; padding: 25px;">
+          <h5>ABOUT US</h5>
           <ul>
-            <li><b>ABOUT US</b></li>
-            <li><a href="#home">Home</a></li>
+            <li><a href="#home" class="active">Home</a></li>
             <li><a href="#games">Games</a></li>
             <li><a href="#portfolio">Team</a></li>
             <li><a href="#contact">Contact Now</a></li>
           </ul>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12" style="padding-bottom: 30px;">
+        <div class="col-md-4 ml-auto  padding-top-10" style="text-align-last: center; padding: 25px;">
+          <h5>GAMES</h5>
           <ul>
-            <li><b>GAMES</b></li>
             <li><a href="https://play.google.com/store/apps/details?id=com.royogames.hypermatch&hl=tr&gl=US"
                 target="_blank">Hyper Match</li>
             <li><a href="#game2">Game2</a></li>
           </ul>
         </div>
+        <hr>
+      </div>
+      <div class="row">
+        <div class="col-md-12 ml-auto"  style="padding-left: 25px; padding-bottom: 15px; font-size:12px">
+          <span>Privacy Policy</span>
+        </div>
       </div>
     </div>
+    </div>
   </footer>
+
   <!-- Scripts -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
