--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@ https://templatemo.com/tm-562-space-dynamic
             <div class="col-lg-6 align-self-center">
               <div class="left-content header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <h6>Welcome to RoyoGames</h6>
-                <h2>We Make <em>Digital Ideas</em> &amp; <span></span> Marketing</h2>
-                <p>Space Dynamic is a professional looking HTML template using a Bootstrap 5 (beta 2). This CSS template
-                  is free for you provided by
+                <h2>We Bring <em>Entertainment </em> <span></span> to Players of All Ages.</h2>
+                <p>Royo Games is a company that has gained 10 years of experience in the mobile game industry. With our games reaching millions of players, we bring entertainment to players of all ages.
+                Royo Games will continue to develop your games for you and push the limits of entertainment.</p>
               </div>
             </div>
             <div class="col-lg-6">
@@ -114,9 +114,8 @@ https://templatemo.com/tm-562-space-dynamic
           </div>
           <div class="row" style="padding-bottom: 30px;padding-top: 20px;">
             <div class="col-sm-10">
-              <p> However, you are not permitted to redistribute the template ZIP file on any CSS template collection
-                websites.
-                Please contact us for more information. Thank you for your kind cooperation.</p>
+              <p> Are you ready to find tetris shapes in Hyper Match world? </p>
+              <p>Find the targeted tetris shapes by combining cubes of the same color and complete the levels.</p>
             </div>
             <div class="col-sm-2">
             </div>
@@ -148,10 +147,10 @@ https://templatemo.com/tm-562-space-dynamic
       <div class="row justify-content-center">
         <div class="col-12 col-lg-4">
           <div class="card blog-card">
-            <img src="https://cdn.peak.com/static/assets/blog/blog-big-data.1064d43b.jpg" class="card-img-top">
+            <img src="assets/images/a.jpg" class="card-img-top" width="400px" height="400px">
             <div class="card-body">
               <h5 class="card-title">Aytaç Coşkun</h5>
-              <p class="card-text">Improving user engagement is our number one priority while developing...</p>
+              <p class="card-text">Co-Founder</p>
               <a href="https://www.linkedin.com/in/ayta%C3%A7-co%C5%9Fkun-659408127/" target="_blank"
                 class="button read-more">LinkedIn
                 <i class="fa fa-angle-right"></i>
@@ -161,10 +160,10 @@ https://templatemo.com/tm-562-space-dynamic
         </div>
         <div class="col-12 col-lg-4">
           <div class="card blog-card">
-            <img src="https://cdn.peak.com/static/assets/blog/blog-big-data.1064d43b.jpg" class="card-img-top">
+            <img src="assets/images/b.jpg" class="card-img-top" width="400px" height="400px">
             <div class="card-body">
               <h5 class="card-title">Ömer Faruk Bulanık</h5>
-              <p class="card-text">Improving user engagement is our number one priority while developing...</p>
+              <p class="card-text">Co-Founder</p>
               <a href="https://www.linkedin.com/in/%C3%B6mer-faruk-bulan%C4%B1k-8754a75b/" target="_blank"
                 class="button read-more">LinkedIn
                 <i class="fa fa-angle-right"></i>
